fix #42: disable scrollbar-* for customizing support

--- a/source/color-scheme.scss
+++ b/source/color-scheme.scss
@@ -28,6 +28,8 @@ $blue_light12: #106bc6; // (fixed)
   --ls-tag-text-opacity: 0.6;
   --ls-tag-text-hover-opacity: 0.8;
   --ls-page-title-size: 36px;
+  scrollbar-color: unset;
+  scrollbar-width: unset;
 }
 
 /* **************************
